--- a/JumpTableCreate/MainWindow.xaml
+++ b/JumpTableCreate/MainWindow.xaml
@@ -8,21 +8,23 @@
         Title="Генератор таблицы переходов и выходов" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label Content="Количество входных переменных:" HorizontalAlignment="Left" Margin="40,50,0,0" FontSize="10" VerticalAlignment="Top"/>
-        <TextBox x:Name="countInput" HorizontalAlignment="Left" Margin="205,50,0,0" Text="2" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Label Content="Количество выходных переменных:" HorizontalAlignment="Left" Margin="40,80,0,0" FontSize="10" VerticalAlignment="Top"/>
-        <TextBox x:Name="countOutput" HorizontalAlignment="Left" Margin="212,80,0,0" Text="2" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Label Content="Количество временных последовательностей:" HorizontalAlignment="Left" Margin="40,110,0,0" FontSize="10" VerticalAlignment="Top"/>
-        <TextBox x:Name="countCycle" HorizontalAlignment="Left" Margin="260,110,0,0" Text="3" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Label Content="Максимальное количество состояний:" HorizontalAlignment="Left" Margin="40,140,0,0" FontSize="10" VerticalAlignment="Top"/>
-        <TextBox x:Name="countJump" HorizontalAlignment="Left" Margin="225,140,0,0" Text="9" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Button x:Name="btnGenerate" Content="Генерация" HorizontalAlignment="Left" Margin="150,170,0,0" VerticalAlignment="Top" Click="btnGenerate_Click"/>
+        <Label Content="Количество входных переменных:" HorizontalAlignment="Left" Margin="40,50,0,0" FontSize="10" VerticalAlignment="Top" Height="23" Width="167"/>
+        <TextBox x:Name="countInput" HorizontalAlignment="Left" Margin="205,50,0,0" Text="2" TextWrapping="Wrap" VerticalAlignment="Top" Height="22" Width="16"/>
+        <Label Content="Количество выходных переменных:" HorizontalAlignment="Left" Margin="40,80,0,0" FontSize="10" VerticalAlignment="Top" Height="23" Width="174"/>
+        <TextBox x:Name="countOutput" HorizontalAlignment="Left" Margin="212,80,0,0" Text="2" TextWrapping="Wrap" VerticalAlignment="Top" Height="22" Width="16"/>
+        <Label Content="Количество временных последовательностей:" HorizontalAlignment="Left" Margin="40,110,0,0" FontSize="10" VerticalAlignment="Top" Height="23" Width="223"/>
+        <TextBox x:Name="countCycle" HorizontalAlignment="Left" Margin="260,110,0,0" Text="3" TextWrapping="Wrap" VerticalAlignment="Top" Height="22" Width="16"/>
+        <Label Content="Максимальное количество состояний:" HorizontalAlignment="Left" Margin="40,140,0,0" FontSize="10" VerticalAlignment="Top" Height="23" Width="187"/>
+        <TextBox x:Name="countJump" HorizontalAlignment="Left" Margin="225,140,0,0" Text="9" TextWrapping="Wrap" VerticalAlignment="Top" Height="22" Width="16"/>
+        <Button x:Name="btnGenerate" Content="Генерация" HorizontalAlignment="Left" Margin="150,170,0,0" VerticalAlignment="Top" Click="btnGenerate_Click" Height="22" Width="65"/>
+        <FlowDocumentScrollViewer Margin="50,30,50,30" Grid.Column="1" Name="docViewer">
+        </FlowDocumentScrollViewer>
     </Grid>
 </Window>
